fix overflow-x and add some links

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -878,6 +878,8 @@ html {
   -webkit-tap-highlight-color: transparent; }
 
 body {
+    width: 100%;
+    overflow-x: hidden;
   font-family: "Open Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857;
